Set TZ for MySql

--- a/charts/sbfspot/values.yaml
+++ b/charts/sbfspot/values.yaml
@@ -45,6 +45,10 @@ mysql:
   auth:
     createDatabase: false
     rootPassword: MyPassword
+  primary:
+    extraEnvVars:
+      - name: TZ
+        value: Europe/Amsterdam
 
 timezone: Europe/Amsterdam
 
