--- a/charts/sbfspot/templates/deployment-uploader.yaml
+++ b/charts/sbfspot/templates/deployment-uploader.yaml
@@ -51,7 +51,7 @@ spec:
             - name: TZ
               value: {{ .Values.timezone }}
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+            {{- toYaml .Values.uploader.resources | nindent 12 }}
           volumeMounts:
             - mountPath: /etc/sbfspot
               name: config
